Refactored some tests, adjusted some URL patterns to adhere to the RESTful standard.
